# F1-Management-Simulator

./: Cargo.toml  Notes.md  README.md  go.mod
.github/workflows/: ci.yml
FormulaOneManagementSimulator/: FormulaOneManagementSimulator.csproj  Program.cs
FormulaOneManagementSimulator/Controllers/: IPointsSystem.cs  IQuery.cs  IRandomGenerator.cs  PointsSystem.cs  Query.cs  RandomGenerator.cs
FormulaOneManagementSimulator/Presenters/: IPresenter.cs  Presenter.cs
FormulaOneManagementSimulator/Services/: ISeasonService.cs  SeasonService.cs
FormulaOneManagementSimulatorTests/: FormulaOneManagementSimulatorTests.csproj
FormulaOneManagementSimulatorTests/Controllers/: PointsSystemShould.cs  QueryShould.cs  RandomGeneratorShould.cs
FormulaOneManagementSimulatorTests/Services/: SeasonServiceShould.cs
components/: car.go  driver.go  driver_name.go  points.go  points_test.go  position.go  team_name.go
components/car/: car.go  car_statistics.go
components/driver/: driver.go  driver_statistics.go
components/grid/: grid.go  grid_test.go  points.go  points_test.go  position.go
components/names/: driver_name.go  race_name.go  team_name.go
entities/: game.go  race.go  team.go
src/: controller.rs  controllers.rs  main.rs  models.rs
src/controller/: random_generator.rs  seeds.rs
src/controllers/: driver_factory.rs  game.rs  random_generator.rs
src/models/: car.rs  driver.rs  driver_name.rs  driver_statistics.rs  drivers.rs  grid.rs  names.rs  points.rs  race.rs  race_grid.rs  race_name.rs  races.rs  (+6 more)
systems/: random_generator.go  random_generator_test.go
(+49 files in other folders)
