[package]
name = "f1_management_simulator"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/F1-Management-Simulator"
repository = "https://github.com/Steelstone3/F1-Management-Simulator"
license = "GPLv3"
readme = "README.md"
include = [

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest="0.*"
rand="0.*"
rand_derive2 ="0.*"
# inquire = "0.*"

[workspace]
resolver = "2"

# Enable a large amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3